# uptask

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uptask.config.ts  vite.config.ts  vitest.config.ts
.changeset/: bright-rice-float.md  config.json  cruel-phones-like.md  dirty-moons-accept.md  funny-pans-clap.md  huge-grapes-rule.md  light-parts-refuse.md  long-bikes-drop.md  major-pianos-decide.md  poor-results-kick.md  short-rivers-shave.md  silver-hornets-sniff.md  tangy-tables-lick.md  tender-falcons-go.md  tough-jeans-own.md  weak-corners-thank.md  weak-sides-glow.md  wise-knives-bake.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: general.yaml  general.yml
cli/: CHANGELOG.md  README.md  index.ts  package.json
cli/actions/: runTaskInCli.ts  runTasksCli.ts
cli/actions/__spec__/: runTasksCli.ts
cli/fixtures/: TestCLITask.ts
core/: CHANGELOG.md  index.ts  package.json  task.ts
core/actions/: batchFunctions.ts  createTasks.ts  findTask.ts  printTasks.ts
core/fixtures/: TestTask.ts
core/models/: logger.ts  task.ts
cron/: CHANGELOG.md  index.ts  package.json  tsconfig.json
cron/actions/: scheduleTasks.ts
cron/fixtures/: TestTask.ts
meta/: CHANGELOG.md  README.md  index.ts  package.json
python/: pyproject.toml
terminal/: index.ts  main.ts  package.json  program.ts
terminal/examples/: @build.ts  @tasks.ts
terminal/fixtures/: async-func.ts  inline-object.ts  mixed-params.ts  multiple-args.ts  nested-object.ts  no-exports.ts  no-jsdoc.ts  optional-array.ts  optional-params.ts  required-string-option.ts  string-defaults.ts
terminal/models/: config.ts  file.ts  function.ts  parameter.ts  path.ts
typescript/: README.md  package.json
uptask/: package.json  program.ts
uptask/examples/: @build.ts
uptask/models/: file.ts  function.ts
website/: astro.config.ts  package.json  wrangler.jsonc
(+34 files in other folders)
